Mon May 31 14:47:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): inspect as ASCII when the codepoint
	  of a character in Unicode string is ASCII printable one.

Mon May 31 13:44:40 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_unicode_p): check the encoding is Unicode
	  or not by the name; not function's pointer. [ruby-dev:41479]

Mon May 31 04:03:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): check if expanded dname encoding is
	  compatible with fname, not just copying.  [ruby-core:30516]

	* test/ruby/test_beginendblock.rb (test_endblockwarn): needs
	  encoding comment.

Mon May 31 02:17:54 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* insns.def (defined): respond_to_missing? may not be available
	  (for BasicObject instances).

Mon May 31 01:43:42 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate: Delegator: combine (public|protected) methods with
	  those of the delegated object. [ruby-core:27224]
	  DelegateClass: combine (public|protected) instance methods
	  with those of the delegated superclass.

Sun May 30 22:18:49 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/set.rb (keep_if, select!): New methods [ruby-core:29749]

Sun May 30 21:51:59 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/rake/test_application.rb: update a test because of r28089.

Sun May 30 21:48:07 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/tempfile.rb (Tempfile#unlink): leave @data.  Assigning nil to
	  @data caused double closing error of the same IO in finalizer.  a
	  patch from Simon Nicholls.  [ruby-core:29395]

Sun May 30 18:47:15 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: updated to b856dd07.
	  this cleans warnings.

Sun May 30 18:25:55 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* load.c (load_failed): use more accurate error message.
	  [ruby-core:23851]

Sun May 30 16:54:34 2010  Yusuke Endoh  <mame@tsg.ne.jp>
